# AnalyzerBrain

./: .coverage  .env  .env.example  .gitignore  AnalisisDespliegueTest.md  EverythingChat.md  IssueList.txt  LICENSE  README.md  SiguientesPasos.md  StadoActual.md  docker-compose.yml  dockerfile  exhaustive_analysis_20260129_225528.json  exhaustive_analysis_20260129_232719.json  exhaustive_analysis_20260129_232719.txt  pyproject.toml
.github/: AnalisisGit.md
AquiDocs/: Checklist.txt  DocEmbeddingsSummary.txt  DocIndexerSummary.txt  DocSrcCoreSummary.txt  UpdatesDone.txt
AquiDocs/Arquitectura/: ArquiFunciones.txt  ArquiUnificado.txt
AquiDocs/DocSummaries/: DocAPISummary.txt  DocConfigSummary.txt  DocDataSummary  DocGraphSummary.txt  DocMemorySummary.txt  DocProjectDataSummary.txt
AquiDocs/Implementation/: MVP-Dog-Fooding.md
AquiDocs/Workflows/: Espectativas.md  EspectativasGenerales.md  MVP-Dog-Fooding-plan.md  StepsTestingUpdates.md  TableSummary.md  TestingPlan.md
Reportes/: 01_exhaustive_analysis_20260129_225528.txt
architecture/: AnalisisCompletoProyecto.md  ImplementationPlan.md  StepsTo-do.md  arquitecture.txt
config/: __init__.py  agent_config.yaml  agents.yaml  api.yaml  databases.yaml  di_Use.md  di_config.yaml  models.yaml  system.yaml  system_config.yaml
data/: init_data_structure.py
data/backups/: README.md  __init__.py  archive.py  backup_manifest.json  crypto.py  filesystem.py  metadata.py  scheduler.py
data/cache/: README.md  __init__.py  disk.py  l3_cache_config.json  memory.py  models.py  redis_cache.py
data/config/: data_config.yaml
data/embeddings/: README.md  __init__.py  cache.py  chroma.py  chromadb_config.yaml  metadata.py  operations.py  search.py  storage.py  utils.py
data/graph_exports/: README.md  __init__.py  builders.py  export_template.cypher  export_template.graphml  exporter.py  exporters.py  utils.py
data/projects/: README.md  __init__.py  analysis.py  export.py  files.py  filesystem.py  metadata.py  sanapshots.py  storage.py  utils.py
data/state/: README.md  __init__.py  agents.py  agents_state_template.json  db.py  events.py  manager.py  operations.py  sessions.py  snapshots.py  system_state.json  workflows.py
dependency_reports/: dependencies_report.txt
deployments/: docker-compose.prod.yml  docker-compose.yml
deployments/docker/: AnalisisDocker.md  backup.sh  health-check.sh  init-db.sh  nginx.conf
deployments/kubernetes/: api-deployment.yaml  configmap.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  neo4j.yaml  nginx-ingress.yaml  postgresql.yaml  redis.yaml  secrets.yaml  serviceaccount.yaml
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
docs/developers/: README.md
docs/examples/: README.md
docs/user_guide/: README.md
monitoring/alerts/: alerts.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yaml
requirements/: agents.txt  api.txt  base.txt  core.txt  databases.txt  dev.txt  ml.txt  prod.txt
resultados/: executive_report_20260130_192609.txt  executive_report_20260130_192650.txt  executive_report_20260130_193239.txt  executive_report_20260130_193326.txt  executive_report_20260130_193336.txt  executive_report_20260130_193402.txt  executive_report_20260130_193447.txt  executive_report_20260130_193529.txt  executive_report_20260130_193607.txt  executive_report_20260130_193741.txt  executive_report_20260130_193811.txt  executive_report_20260130_193840.txt  executive_report_20260130_193930.txt  executive_summary_20260130_183330.md  executive_summary_20260130_185438.md  full_analysis_20260130_192609.json  full_analysis_20260130_192650.json  full_analysis_20260130_193239.json  full_analysis_20260130_193326.json  full_analysis_20260130_193336.json  full_analysis_20260130_193402.json  full_analysis_20260130_193447.json  full_analysis_20260130_193529.json  full_analysis_20260130_193607.json  full_analysis_20260130_193741.json  full_analysis_20260130_193811.json  full_analysis_20260130_193840.json  full_analysis_20260130_193930.json  summary_analysis_20260130_183330.txt  summary_analysis_20260130_185438.txt  technical_report_20260130_192609.txt  technical_report_20260130_193326.txt  technical_report_20260130_193336.txt  technical_report_20260130_193607.txt  technical_report_20260130_193741.txt  technical_report_20260130_193811.txt  technical_report_20260130_193840.txt  technical_report_20260130_193930.txt
resultados/tables/: __init___analysis.txt
scripts/: analyze_project.py  backup_restore.py  create_test_project.py  diagnose_imports.py  exhaustive_project_analyzer_v2.py  export_knowledge.py  init_data_system.py  init_db.sql  init_project.py  migrate_data.py  monitor_system.py  query_project.py  run_tests.py  setup.sh  setup_data_permissions.sh  verify_data_integrity.py  verify_environment.py
scripts/analyzer_code/: workflow_discovery.py
src/: AnalisisSRC.md  __init__.py  _version.py  init.py  main.py
src/agents/: __init__.py  agent_factory.py  agent_orchestrator.py  analyst_agent.py  architect_agent.py  base_agent.py  code_analyzer_agent.py  collaboration_protocol.py  curator_agent.py  detective_agent.py  learning_agent.py  qa_agent.py  security_agent.py
src/api/: __init__.py  authentication.py  cli_interface.py  grpc_api.py  rate_limiter.py  request_validator.py  rest_api.py  server.py  web_ui.py  websocket_api.py
src/core/: __init__.py  config_manager.py  dependency_injector.py  event_bus.py  exceptions.py  health_check.py  orchestrator.py  plugin_manager.py  system_state.py  workflow_manager.py
src/embeddings/: __init__.py  dimensionality_reducer.py  embedding_cache.py  embedding_generator.py  embedding_models.py  semantic_search.py  vector_store.py
src/graph/: __init__.py  consistency_checker.py  graph_analytics.py  graph_builder.py  graph_exporter.py  graph_query_engine.py  graph_traverser.py  knowledge_graph.py  schema_manager.py
src/indexer/: __init__.py  change_detector.py  dependency_mapper.py  entity_extractor.py  models.py  (+7 more)
tests/: conftest.md  conftest.py  run_test_systemState.py  test_configuration.py
(+66 files in other folders)
