[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=7.0.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "analyzerbrain"
description = "Sistema inteligente de análisis de código con IA y grafos de conocimiento"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}
authors = [
    {name = "ANALYZERBRAIN Team", email = "team@analyzerbrain.dev"}
]
keywords = ["code-analysis", "ai", "knowledge-graph", "nlp", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "loguru>=0.7.0,<0.8.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "email-validator>=2.0.0,<3.0.0",
    
    # Async
    "anyio>=3.7.0,<4.0.0",
    "aiofiles>=23.2.0,<24.0.0",
    
    # Utilidades
    "rich>=13.0.0,<14.0.0",
    "click>=8.1.0,<9.0.0",
    "tqdm>=4.65.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.11.0,<24.0.0",
    "ruff>=0.1.0,<0.2.0",
    "mypy>=1.7.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]

api = [
    "fastapi>=0.104.0,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "websockets>=12.0,<13.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
]

[project.scripts]
analyzerbrain = "src.main:main"
analyzerbrain-cli = "src.api.cli_interface:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*", "test*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.txt", "*.md"]

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true