[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------------------------------------------------------
# PROYECTO
# -------------------------------------------------------------------
[project]
name = "analyzerbrain"
version = "0.1.0"
description = "Sistema inteligente de análisis de código con IA y grafos de conocimiento"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "David Rolando Ugalde Solís" }
]

keywords = [
    "static-analysis",
    "knowledge-graph",
    "ai-agents",
    "code-analysis",
    "software-architecture"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

# ⚠️ Dependencias NO van aquí porque usas requirements/*.txt
dependencies = []

# -------------------------------------------------------------------
# SETUPTOOLS – SRC LAYOUT
# -------------------------------------------------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "data*", "deployments*", "monitoring*"]

# -------------------------------------------------------------------
# PYTEST
# -------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "9.0"
addopts = """
-ra
-q
--strict-markers
--strict-config
--disable-warnings
"""

testpaths = ["tests"]

pythonpath = [
    "src"
]

asyncio_mode = "auto"

markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "performance: performance tests"
]

# -------------------------------------------------------------------
# COVERAGE
# -------------------------------------------------------------------
[tool.coverage.run]
source = ["src/core"]
branch = true
parallel = true
omit = [
    "src/main.py",
    "src/**/__init__.py",
    "tests/*",
    "venv/*"
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2
fail_under = 60

exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass"
]

# -------------------------------------------------------------------
# FORMATTERS & LINTING
# -------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["core", "utils", "agents", "api"]
src_paths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP"
]

ignore = [
    "E501",  # line too long (handled by black)
]

exclude = [
    "venv",
    ".venv",
    "data",
    "deployments",
    "monitoring"
]

# -------------------------------------------------------------------
# MYPY (cuando empieces tipado fuerte)
# -------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
exclude = [
    "tests/",
    "data/",
    "deployments/"
]
